Adding services now works, as does display

--- a/views/signup.jade
+++ b/views/signup.jade
@@ -11,7 +11,7 @@ block content
 					table
 						for responsibility in service.responsibilities
 							tr
-								td= responsibility.type
+								td= responsibility.description
 								td= responsibility.detail
 		else
 			p No services listed
