Added link for uncancel, changed test auth

--- a/views/signup.jade
+++ b/views/signup.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
 	h1 Sign up!
-	p Hello #{user.name}!
+	p Hello #{user.displayName}!
 
 	.signup-calendar
 		for service in services
@@ -21,6 +21,11 @@ block content
 										button(type="submit") Sign up
 								else
 									p= responsibility.volunteer
+							td
+								if responsibility.volunteer
+									form(method="POST", action="/unsignup/#{service.id}/#{responsibility.type}")
+										button(type="submit") Cancel
+
 		else
 			p No services listed
 	script(type="text/javascript",src="/javascripts/signup.js")
